--- a/Metagraph_editor/MetagraphEnvironment/Vitalka_DLL.csproj
+++ b/Metagraph_editor/MetagraphEnvironment/Vitalka_DLL.csproj
@@ -175,6 +175,8 @@
     <Content Include="Style\css\bootstrap.min.css" />
     <Content Include="Style\css\NEW.css" />
     <Content Include="Saved.xml" />
+    <None Include="Properties\PublishProfiles\FuzzyKnowledgeBase - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\FuzzyKnowledgeBase - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\graffle.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
