--- a/Metagraph_editor/MetagraphEnvironment/packages.config
+++ b/Metagraph_editor/MetagraphEnvironment/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxControlToolkit" version="16.1.1.0" targetFramework="net451" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net40" />
   <package id="ExcelAbstraction" version="0.0.7" targetFramework="net40" />
   <package id="ExcelAbstraction.NPOI" version="0.0.5" targetFramework="net40" />
