--- a/Metagraph_editor/MetagraphEnvironment/Vitalka_DLL.csproj
+++ b/Metagraph_editor/MetagraphEnvironment/Vitalka_DLL.csproj
@@ -176,6 +176,8 @@
     <Content Include="Style\css\bootstrap.min.css" />
     <Content Include="Style\css\NEW.css" />
     <Content Include="Saved.xml" />
+    <None Include="Properties\PublishProfiles\fazikb - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\fazikb - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\FuzzyKnowledgeBase - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\FuzzyKnowledgeBase - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
